--- a/src/desktop/src/guide/index.css
+++ b/src/desktop/src/guide/index.css
@@ -25,7 +25,7 @@
                 text-decoration: none;
                 &:hover,
                 &[aria-current='true'] {
-                    color: var(--color-highlight);
+                    color: var(--color-highlightBorder);
                 }
             }
         }
