--- a/src/desktop/src/guide/pages/Buttons.css
+++ b/src/desktop/src/guide/pages/Buttons.css
@@ -1,5 +1,5 @@
 .buttons {
     button {
-        margin: 0 32px 0 0;
+        margin: 0 32px 16px 0;
     }
 }
